roles/kube_lab/templates/mimir/mimir.envsubst.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Service
metadata:
  name: mimir-headless
  labels:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/instance: mimir
  namespace: observability
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8080
      targetPort: http-metrics
    - name: grpc
      protocol: TCP
      port: 9095
      targetPort: grpc
    - name: gossip-ring
      protocol: TCP
      port: 7946
      targetPort: gossip-ring
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/instance: mimir
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/instance: mimir
  name: mimir
  namespace: observability
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mimir
      app.kubernetes.io/instance: mimir
  serviceName: mimir-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mimir
        app.kubernetes.io/instance: mimir
    spec:
      containers:
        - args:
            - "-target=all"
            - "-config.expand-env=true"
            - "-config.file=/etc/mimir/mimir.yaml"
          image: ${localregistry}/${mimir}
          imagePullPolicy: IfNotPresent
          name: mimir
          ports:
            - name: http-metrics
              containerPort: 8080
              protocol: TCP
            - name: grpc
              containerPort: 9095
              protocol: TCP
            - name: gossip-ring
              containerPort: 7946
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 1
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 1
            failureThreshold: 12
          resources:
          volumeMounts:
            - name: license
              mountPath: /license
            - name: config
              mountPath: /etc/mimir
            - name: runtime-config
              mountPath: /var/mimir
            - name: storage
              mountPath: /data
            - name: alertmanager-fallback-config
              mountPath: /configs/
            - name: tmp
              mountPath: /tmp
            - name: active-queries
              mountPath: /active-query-tracker
      securityContext:
        fsGroup: 10001
        runAsUser: 10001
        runAsGroup: 10001
        runAsNonRoot: true
      terminationGracePeriodSeconds: 300
      volumes:
        - name: license
          configMap:
            name: gem-license
        - name: config
          configMap:
            name: mimir-config
        - name: runtime-config
          configMap:
            name: mimir-runtime
        - name: alertmanager-fallback-config
          configMap:
            name: mimir-alertmanager-fallback-config
        - name: tmp
          emptyDir: {}
        - name: active-queries
          emptyDir: {}
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir
  labels:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/instance: mimir
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: "observability"
spec:
  rules:
    - host: "mimir.${kube_ingress_root_domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-headless
                port:
                  number: 8080
